--- a/about-ancs.html
+++ b/about-ancs.html
@@ -68,44 +68,37 @@
 
   <!-- Main content of the page -->
   <main id="main-content" role="main">
+    <section id="contact" class="section-band bg-lighter">
 
-    <!-- Section describing what an ANC is -->
-    <section id="whats-an-anc" class="section-band bg-light">
-
+      <!-- Personal background -->
       <div class="container">
         <h3>What's an ANC?</h3>
-        <figure class="anc-map-container">
-          <figure>
-            <img src="images/anc-map.png" alt="A map of DC's ANCs and single-member districts" loading="lazy"
-              width="250" height="250" />
-            <figcaption>
-              A map of DC's ANCs and single-member districts.
-              <span class="credit">Source: OpenANC.org.</span>
-            </figcaption>
-          </figure>
 
-
-
-          <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
-            Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
-            began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
-            January 2, 2025.
-          </p>
-          <p>In the words of <a href="https://51st.news/what-are-washington-dc-advisory-neighborhood-commissions-anc/"
-              target="_blank" rel="noopener noreferrer"><i>The 51st</i></a>,
-            "At a very basic level, your Advisory Neighborhood Commissioner is the neighborhood's eyes and ears, and
-            the
-            mechanism to tip people higher up in the government if something isn't working. That relationship also flows
-            in the other direction: D.C. agencies often have to come before ANCs to, say, present plans on a new traffic
-            pattern for a specific street, allowing for residents to be notified and share their input in one place."
-          </p>
-          <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts.
-            There are 46 ANCs consisting of 345 single-member districts in DC. Each single-member district includes
-            about
-            2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
-              rel="noopener noreferrer">OpenANC.org</a> is a great website that maintains an updated map and list of
-            ANCs.
-          </p>
+        <!-- Headshot image with rounded styling and performance optimization -->
+        <div class="headshot-container">
+          <img src="images/anc-map.png" alt="A map of DC's ANCs and single-member districts" class="headshot-image"
+            loading="lazy" width="250" height="250">
+        </div>
+        <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
+          Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
+          began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
+          January 2, 2025.
+        </p>
+        <p>In the words of <a href="https://51st.news/what-are-washington-dc-advisory-neighborhood-commissions-anc/"
+            target="_blank" rel="noopener noreferrer"><i>The 51st</i></a>,
+          "At a very basic level, your Advisory Neighborhood Commissioner is the neighborhood's eyes and ears, and
+          the
+          mechanism to tip people higher up in the government if something isn't working. That relationship also flows
+          in the other direction: D.C. agencies often have to come before ANCs to, say, present plans on a new traffic
+          pattern for a specific street, allowing for residents to be notified and share their input in one place."
+        </p>
+        <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts.
+          There are 46 ANCs consisting of 345 single-member districts in DC. Each single-member district includes
+          about
+          2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
+            rel="noopener noreferrer">OpenANC.org</a> is a great website that maintains an updated map and list of
+          ANCs.
+        </p>
       </div>
     </section>
   </main>
