--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -78,7 +78,8 @@
             2B</a>, which covers the Dupont Circle
           neighborhood.
         </p>
-        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the map below:</p>
+        <p>To confirm whether you live in ANC 2B01, enter your address in the search box on the interactive map below:
+        </p>
 
         <!-- Interactive map with enhanced accessibility -->
         <figure class="map-container" role="region"
