trying to fixabout anc

--- a/about-ancs.html
+++ b/about-ancs.html
@@ -75,10 +75,14 @@
         <h3>What's an ANC?</h3>
 
         <!-- Headshot image with rounded styling and performance optimization -->
-        <div class="headshot-container">
+        <figure class="anc-map-container">
           <img src="images/anc-map.png" alt="A map of DC's ANCs and single-member districts" class="headshot-image"
-            loading="lazy" width="250" height="250">
-        </div>
+            loading="lazy" width="250" height="250" />
+          <figcaption>
+            A map of DC's ANCs and single-member districts
+            <span class="credit">Source: OpenANC.org.</span>
+          </figcaption>
+        </figure>
         <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
           Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
           began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
