--- a/about-ancs.html
+++ b/about-ancs.html
@@ -78,11 +78,11 @@
         <figure class="anc-map-container">
           <img src="images/anc-map.png" alt="A map of DC's ANCs and single-member districts" class="headshot-image"
             loading="lazy" width="250" height="250" />
-          <figcaption>
-            A map of DC's ANCs and single-member districts
-            <span class="credit">Source: OpenANC.org.</span>
-          </figcaption>
         </figure>
+        <figcaption class="anc-map-caption">
+          A map of DC's ANCs and SMDs
+          <span class="credit">Source: OpenANC.org.</span>
+        </figcaption>
         <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
           Neighborhood Commissioners. They are a unique feature of the Washington, DC's Home Rule Charter, and they
           began operating in 1976. Commissioners serve two-year terms and receive no salary. The current term began on
@@ -96,7 +96,8 @@
           in the other direction: D.C. agencies often have to come before ANCs to, say, present plans on a new traffic
           pattern for a specific street, allowing for residents to be notified and share their input in one place."
         </p>
-        <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts.
+        <p>Each of DC's eight wards consists of multiple ANCs. Each ANC consists of multiple single-member districts
+          (SMD).
           There are 46 ANCs consisting of 345 single-member districts in DC. Each single-member district includes
           about
           2,000 residents. <a href="https://openanc.org/index.html" target="_blank"
