--- a/about-me.html
+++ b/about-me.html
@@ -88,7 +88,7 @@
           ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
             href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
             target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
+            vacancy</a> a few months into the current two-year term. <b>As your commissioner, it's my responsibility to
             answer
             questions and help solve problems for my constituents in North Dupont.</b>
         <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
