--- a/about-ancs.html
+++ b/about-ancs.html
@@ -78,11 +78,11 @@
         <figure class="anc-map-container">
           <img src="images/anc-map.png" alt="A map of DC's ANCs and single-member districts" class="headshot-image"
             loading="lazy" width="250" height="250" />
+          <figcaption>
+            A map of DC's ANCs and SMDs
+            <span class="credit">Source: OpenANC.org</span>
+          </figcaption>
         </figure>
-        <figcaption class="anc-map-caption">
-          A map of DC's ANCs and SMDs
-          <span class="credit">Source: OpenANC.org</span>
-        </figcaption>
 
 
         <p>An ANC is a non-partisan, neighborhood body made up of locally elected representatives called Advisory
