--- a/about-ancs.html
+++ b/about-ancs.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Andrew DeFrank serves as ANC 2B01 Commissioner for North Dupont Circle. Contact your local Advisory Neighborhood Commissioner for community concerns, questions, and civic engagement in Washington DC.">
+
 
   <!-- SEO Meta Tags -->
   <title>What's an ANC? - Commissioner Andrew DeFrank - ANC 2B01 </title>
@@ -28,6 +31,9 @@
   <!-- Preload Images -->
   <link rel="preload" href="images/anc-headshot.jpg" as="image" type="image/png" />
   <link rel="preload" href="images/anc-map.png" as="image" type="image/png" />
+  <meta name="description"
+    content="Andrew DeFrank serves as ANC 2B01 Commissioner for North Dupont Circle. Contact your local Advisory Neighborhood Commissioner for community concerns, questions, and civic engagement in Washington DC.">
+
 
 </head>
 
