--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- Preload Images -->
-  <link rel="preload" href="images/anc-headshot.jpg" as="image" type="image/png" />
+  <link rel="preload" href="images/anc-headshot.jpg" as="image" type="image/jpeg" />
   <link rel="preload" href="images/anc-map.png" as="image" type="image/png" />
+
+  <!-- SEO -->
+
+  <meta name="description"
+    content="Andrew DeFrank, ANC 2B01 Commissioner for Dupont Circle, Washington DC. Contact your local Advisory Neighborhood Commissioner for community concerns and questions." />
+  <meta name="keywords"
+    content="ANC 2B01, Advisory Neighborhood Commissioner, Andrew DeFrank, Dupont Circle, Washington DC, local government" />
+  <meta property="og:title" content="ANC 2B01 – Andrew DeFrank" />
+  <meta property="og:description" content="Andrew DeFrank, ANC 2B01 Commissioner for Dupont Circle, Washington DC." />
+  <meta property="og:url" content="https://anc2b01.org" />
+  <meta property="og:type" content="website" />
 
 </head>
 
@@ -109,7 +120,7 @@
 
   <!-- Footer area -->
   <footer role="contentinfo">
-    <p>&copy; 2025 Andrew DeFrank, all rights reserved</p>
+    <p>© 2025 Andrew DeFrank, all rights reserved</p>
   </footer>
 
   <!-- JavaScript for functionality -->
