made some changes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
   <link rel="preload" href="images/anc-map.png" as="image" type="image/png" />
 
   <!-- SEO -->
-
-  <meta name="description"
-    content="Andrew DeFrank, ANC 2B01 Commissioner for Dupont Circle, Washington DC. Contact your local Advisory Neighborhood Commissioner for community concerns and questions." />
   <meta name="keywords"
     content="ANC 2B01, Advisory Neighborhood Commissioner, Andrew DeFrank, Dupont Circle, Washington DC, local government" />
   <meta property="og:title" content="ANC 2B01 – Andrew DeFrank" />
@@ -61,7 +58,7 @@
       <h2 class="subtitle">ANC 2B01</h2>
     </div>
 
-    <nav class="right" role="navigation" id="main-navigation" aria-label="Main navigation">
+    <nav class="right" id="main-navigation" aria-label="Main navigation" role="navigation">
       <!-- Hamburger button -->
       <button class="menu-toggle" aria-controls="primary-menu" aria-label="Toggle navigation menu"
         aria-expanded="false">
