--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
           ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
             href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
             target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As your commissioner, it's my responsibility to
-            answer
-            questions and help solve problems for my constituents in North Dupont. </b></p>
+            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
+            answer questions, help solve problems, and advocate for my constituents. </b>
+        </p>
         <p>
           Please
           <a href="contact.html" target="_blank" rel="noopener noreferrer">get in touch</a>, or click one of
-          the following links to learn more about my background, ANCs, and my actions as commissioner.
+          the following links to learn more about my background, ANCs, our district, and my actions as commissioner.
         </p>
 
         <div class="homepage-buttons">
