--- a/about-me.html
+++ b/about-me.html
@@ -91,15 +91,16 @@
           ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
             href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
             target="_blank" rel="noopener noreferrer">a
-            vacancy</a> a few months into the current two-year term. <b>As your commissioner, it's my responsibility to
-            answer
-            questions and help solve problems for my constituents in North Dupont.</b>
+            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
+            answer questions, help solve problems, and advocate for my constituents. </b>
+        </p>
         <p>I grew up by Eastern Market, and have lived in Northwest DC throughout my 20s. I'm an urban planner and
           economic development consultant, supporting transit-oriented development and parks and public space
           projects
           in the DC
           region.
-          I previously worked in DC government, including as a community engagement specialist responding to
+          I previously worked in DC government, including as a community engagement specialist, a role which included
+          responding to
           questions
           and concerns from ANC
           commissioners in Ward 2.</p>
@@ -113,8 +114,10 @@
           aim to inform and inspire Washingtonians.
         </p>
         <p>
-          I enjoy biking around the city, watching movies at our independent cinemas, and rooting for
-          DC's sports teams. I live on 19th Street in North Dupont.
+          I enjoy biking around DC, watching movies at our independent theaters, and passionately rooting for
+          our city's sports teams. I love my hometown, and I am honored to serve DC residents as an ANC commissioner. I
+          live on 19th
+          Street north of Dupont Circle.
         </p>
       </div>
     </section>
