--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
             target="_blank" rel="noopener noreferrer">a
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
-            answer questions, help solve problems, and advocate for my constituents. </b>
+            answer questions, help solve problems, and advocate for my constituents in ANC 2B01. </b>
         </p>
         <p>
           Please
