--- a/about-me.html
+++ b/about-me.html
@@ -105,13 +105,12 @@
           and concerns from ANC
           commissioners in Ward 2.</p>
         <p>
-          I care deeply about DC's future. I advocate for building a more affordable and sustainable city through
-          the
-          embrace dense urban
-          growth and reliable, frequent public and active transportation. I organize to protect DC's limited self
-          government and ultimately secure
-          equal rights through statehood. I write and edit for local publications that
-          aim to inform and inspire Washingtonians.
+          I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
+          ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
+            href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
+            target="_blank" rel="noopener noreferrer">a
+            vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
+            answer questions, help solve problems, and advocate for my constituents in ANC 2B01. </b>
         </p>
         <p>
           I enjoy biking around DC, watching movies at our independent theaters, and passionately rooting for
