--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
         <p>
           I'm Andrew DeFrank, a DC native and Dupont Circle resident since 2024. I have been the
-          ANC commissioner for ANC 2B01 since June 2025, after stepping in to fill <a
+          ANC commissioner for ANC 2B01 since June 2025, when I stepped in to fill <a
             href="https://oanc.dc.gov/release/board-elections-announces-anc-2b01-vacancy-dupont-circle-community"
             target="_blank" rel="noopener noreferrer">a
             vacancy</a> a few months into the current two-year term. <b>As a commissioner, it's my responsibility to
-            answer questions, help solve problems, and advocate for my constituents in ANC 2B01. </b>
+            answer questions, help solve problems, and advocate for my constituents in 2B01. </b>
         </p>
         <p>
           Please
