--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://anc2b01.org" />
 
-  <!--  favicon  -->
+  <!--  favicon (new) -->
   <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png" />
   <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
   <link rel="shortcut icon" href="/images/favicon.ico" />
