--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
   <!-- Fixed header that remains visible as you scroll -->
   <header class="site-header" role="banner">
     <div class="left">
-      <!-- Left side of the header: title and role -->
-      <h2 class="subtitle">Commissioner</h2>
-      <h1><a href="index.html">Andrew DeFrank</a></h1>
-      <h2 class="subtitle">ANC 2B01</h2>
+      <a href="index.html" class="logo-link">
+        <img src="images/header-text-desktop.png" alt="Commissioner - Andrew DeFrank - 2B01 logo" class="logo-desktop"
+          width="400" height="142" />
+        <img src="images/header-text-mobile.png" alt="Commissioner - Andrew DeFrank - 2B01 logo" class="logo-mobile"
+          width="400" height="142" />
+      </a>
     </div>
+
+    <h1 class="sr-only">ANC 2B01 – Andrew DeFrank</h1>
+    </div>
+
 
     <nav class="right" id="main-navigation" aria-label="Main navigation" role="navigation">
       <!-- Hamburger button -->
