--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
   <!-- Fixed header that remains visible as you scroll -->
   <header class="site-header" role="banner">
     <div class="left">
-      <a href="index.html" class="logo-link">
-        <img src="images/header-text-desktop.png" alt="Commissioner - Andrew DeFrank - 2B01 logo" class="logo-desktop"
-          width="400" height="142" />
-        <img src="images/header-text-mobile.png" alt="Commissioner - Andrew DeFrank - 2B01 logo" class="logo-mobile"
-          width="400" height="142" />
-      </a>
+      <img src="header-text-desktop.png" alt="Header Text Desktop" class="logo-desktop" />
+      <img src="header-text-mobile.png" alt="Header Text Mobile" class="logo-mobile" />
     </div>
+
 
     <h1 class="sr-only">ANC 2B01 – Andrew DeFrank</h1>
     </div>
