--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
   <!-- Fixed header that remains visible as you scroll -->
   <header class="site-header" role="banner">
     <div class="left">
-      <img src="header-text-desktop.png" alt="Header Text Desktop" class="logo-desktop" />
-      <img src="header-text-mobile.png" alt="Header Text Mobile" class="logo-mobile" />
+      <img src="images/header-text-desktop.png" alt="Header Text Desktop" class="logo-desktop" />
+      <img src="images/header-text-mobile.png" alt="Header Text Mobile" class="logo-mobile" />
     </div>
-
-
     <h1 class="sr-only">ANC 2B01 – Andrew DeFrank</h1>
-    </div>
 
 
     <nav class="right" id="main-navigation" aria-label="Main navigation" role="navigation">
