--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   <!-- Fixed header that remains visible as you scroll -->
   <header class="site-header" role="banner">
     <div class="left">
-      <img src="images/header-text-desktop.png" alt="Header Text Desktop" class="logo-desktop" />
-      <img src="images/header-text-mobile.png" alt="Header Text Mobile" class="logo-mobile" />
+      <!-- Left side of the header: title and role -->
+      <h2 class="subtitle">Commissioner</h2>
+      <h1><a href="index.html">Andrew DeFrank</a></h1>
+      <h2 class="subtitle">ANC 2B01</h2>
     </div>
-    <h1 class="sr-only">ANC 2B01 – Andrew DeFrank</h1>
-
 
     <nav class="right" id="main-navigation" aria-label="Main navigation" role="navigation">
       <!-- Hamburger button -->
