--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&display=swap"
+    rel="stylesheet" />
+  " rel="stylesheet" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
