--- a/about-me.html
+++ b/about-me.html
@@ -45,9 +45,8 @@
   <header class="site-header" role="banner">
     <div class="left">
       <!-- Left side of the header: title and role -->
-      <h2 class="subtitle">Commissioner</h2>
       <h1><a href="index.html">Andrew DeFrank</a></h1>
-      <h2 class="subtitle">ANC 2B01</h2>
+      <h2 class="subtitle">Commissioner, ANC 2B01</h2>
     </div>
 
     <nav class="right" role="navigation" id="main-navigation" aria-label="Main navigation">
