created news page

--- a/anc-2b01.html
+++ b/anc-2b01.html
@@ -60,6 +60,7 @@
         <li><a href="about-ancs.html">What's an ANC?</a></li>
         <li><a href="anc-2b01.html">ANC 2B01</a></li>
         <li><a href="actions.html">Actions</a></li>
+        <li><a href="news.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
