--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@
     <!-- Main content of the page -->
     <main id="main-content" role="main">
         <!-- social details-->
-        <section id="contact" class="section-band bg-lighter">
+        <section id="news" class="section-band bg-lighter">
             <div class="container">
                 <h3>Newsletter</h3>
                 <p> Sign up for future editions of my newsletter, and read the latest copy below: <i>Forthcoming</i>
@@ -109,7 +109,7 @@
                         rel="noopener noreferrer">here</a>.</p>
             </div>
 
-        </section> <!-- End of contact section -->
+        </section> <!-- End of news section -->
     </main>
 
     <!-- Footer area -->
